# cmd/prom_server/internal/service/strategy/import.go
@@ -3,26 +3,31 @@ package strategy
 import (
 	"context"
 	"mime/multipart"
+
+	ginplus "github.com/aide-cloud/gin-plus"
+	"go.uber.org/zap"
 )
 
 type (
 	// ImportReq ...
 	ImportReq struct {
 		// add request params
-		RuleYamlFiles []*multipart.FileHeader `form:"rule_yaml_file" binding:"required"`
+		RuleYamlFiles []*multipart.FileHeader `form:"rule_yaml_files" binding:"required"`
+		GroupId       uint                    `uri:"group_id"`
 	}
 
 	// ImportResp ...
 	ImportResp struct {
 		// add response params
-		GroupCount int `json:"group_count"`
+		StrategyCount int `json:"strategy_count"`
 	}
 )
 
 // PostImport ...
 func (l *Strategy) PostImport(ctx context.Context, req *ImportReq) (*ImportResp, error) {
-	strategyInfoList, err := l.strategyRepository.ParseStrategyFiles(ctx, req.RuleYamlFiles)
+	strategyInfoList, err := l.strategyRepository.ParseStrategyFiles(ctx, req.RuleYamlFiles, req.GroupId)
 	if err != nil {
+		ginplus.Logger().Error("parse strategy files error", zap.Error(err))
 		return nil, err
 	}
 
@@ -30,5 +35,7 @@ func (l *Strategy) PostImport(ctx context.Context, req *ImportReq) (*ImportResp,
 		return nil, err
 	}
 	// add your code here
-	return &ImportResp{}, nil
+	return &ImportResp{
+		StrategyCount: len(strategyInfoList),
+	}, nil
 }
